[package]
name = "graceful-shutdown"
version = "0.1.0"
authors = ["Thayne McCombs <astrothayne@gmail.com>"]
edition = "2018"

[features]
# This can be removed in rust 1.51
stream = ["futures-core"]
tokio-timeout = ["tokio"]
async-io-timeout = ["async-io"]

[dependencies]
pin-project-lite = "0.2"

[dependencies.futures-core]
version = "0.3.12"
optional = true

[dependencies.tokio]
version = "1.2"
optional = true
features = ["time"]

[dependencies.async-io]
version = "1.3.1"
optional = true
