[package]
name = "graceful-shutdown"
version = "0.2.0"
authors = ["Thayne McCombs <astrothayne@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/tmccombs/graceful-shutdown"
description = "Graceful Shutdown for async code"
categories = ["asynchronous"]
keywords = ["async", "graceful", "shutdown"]
rust-version = "1.51"

[features]
# This can be removed once future streams are in std.
# See https://github.com/rust-lang/rust/issues/79024
stream = ["futures-core"]
tokio-timeout = ["tokio"]
async-io-timeout = ["async-io"]

[dependencies]
pin-project-lite = "0.2"

[dependencies.futures-core]
version = "0.3.12"
optional = true

[dependencies.tokio]
version = "1.2"
optional = true
features = ["time"]

[dependencies.async-io]
version = "2.3"
optional = true

[dev-dependencies.tokio]
version = "1.2"
features = ["rt", "macros", "time", "rt-multi-thread", "signal", "net", "io-util"]

[dev-dependencies.tokio-stream]
version = "0.1"
features = ["net"]

[dev-dependencies]
smol = "1.2"
futures-task = "0.3"

[[example]]
name = "echo1"

[[example]]
name = "echo_stream"
required-features = ["stream", "tokio-timeout"]

[[example]]
name = "smol_echo"
required-features = ["async-io-timeout", "stream"]

